#1499: Converted GetTransactionGroups UC to extend BaseMultipleEntitiesCommand